--- a/Control_Systems_Solver/src/assets/main.css
+++ b/Control_Systems_Solver/src/assets/main.css
@@ -1,9 +1,11 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 2rem;
+  padding-left: 0% !important;
+  padding-right: 0% !important;
   font-weight: normal;
 }
 
